--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
-body {
+:root {
+  --primary-color: #1fab89;
+  --secondary-color: #62d2a2;
+  --background-color: #d7fbe8;
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: var(--background-color);
+}
+
+h2 {
+  padding: 0;
+  margin: 0;
 }
 
 code {
