--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@
   text-align: center;
 }
 
+div.modalBg {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  backdrop-filter: blur(6px);
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
