--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -31,6 +31,9 @@
 
 .post-info > div:nth-child(2) > :nth-child(4) > p {
   cursor: pointer;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
 }
 .post-info > div:nth-child(2) > time {
   position: absolute;
