--- a/src/components/CreateComment/styles.css
+++ b/src/components/CreateComment/styles.css
@@ -4,7 +4,8 @@
   align-items: center;
   background-color: var(--primary-color);
   padding: 2rem;
-  border-radius: 3px;
+  border-radius: 7px;
+  position: relative;
 }
 
 .modal-comment > button {
@@ -18,4 +19,12 @@
   padding: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.modal-comment > p {
+  color: #cc0000;
+  position: absolute;
+  bottom: 2%;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
