--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -1,12 +1,19 @@
 .post-container {
   background-color: var(--primary-color);
   color: white;
-  border-radius: 4px;
+  border-radius: 7px;
   margin-bottom: 2rem;
+  width: 320px;
+  margin: 2rem auto;
 }
 
 .post-image {
+  height: 360px;
   width: 100%;
+  object-fit: scale-down;
+  /*  object-position: center center; */
+  background-color: black;
+  border-radius: 7px 7px 0 0;
 }
 
 .post-info {
@@ -26,7 +33,7 @@
   font-weight: 650;
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .post-info > div:nth-child(2) > :nth-child(4) > p {
@@ -55,7 +62,7 @@
   padding: 0.5rem;
   word-wrap: break-word;
   border-radius: 3px;
-  z-index: 1111;
+  z-index: 11;
 }
 
 .comments-section > div {
