--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -25,6 +25,12 @@
   width: 100%;
 }
 
+.post-info > :nth-child(2) h3 {
+  color: white;
+  margin-bottom: 0.5rem;
+  cursor: pointer;
+}
+
 .post-info > div:nth-child(2) > * {
   margin-bottom: 0.5rem;
 }
@@ -34,6 +40,10 @@
 
   display: flex;
   justify-content: space-between;
+}
+
+.post-info button {
+  font-size: 0.8rem;
 }
 
 .post-info > div:nth-child(2) > :nth-child(4) > p {
