--- a/src/components/CreatePost/styles.css
+++ b/src/components/CreatePost/styles.css
@@ -17,4 +17,6 @@
   padding: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
