--- a/src/components/NavHeader/style.css
+++ b/src/components/NavHeader/style.css
@@ -40,4 +40,25 @@ header {
 
 h2 {
   color: white;
+  transition: all 0.5s ease;
+}
+
+h2:hover{
+  font-size: 1.7rem;
+  padding: 0%;
+}
+
+.hamburguer {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 1.5rem;
+  height: 2px;
+  margin-top: 0.2rem;
+  background-color: white;
 }
