--- a/src/components/Register/styles.css
+++ b/src/components/Register/styles.css
@@ -1,29 +1,32 @@
 .btn {
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    border: 0;
-    font-size: 1rem;
-    font-weight: 900;
-    border-radius: 8px;
-    background-color: var(--secondary-color);
-    cursor: pointer;
-    color: white;
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  border: 0;
+  font-size: 1rem;
+  font-weight: 900;
+  border-radius: 8px;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+  color: white;
 }
 
 .register-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 8rem;
-    background-color: var(--primary-color);
-    border-radius: 8px;
-    color: white;
-    padding-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 8rem;
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  color: white;
+  padding-bottom: 2rem;
+}
+
+.register-container > form > .btn {
+  margin-left: 0;
+  margin-top: 2rem;
 }
 
 input {
-    width: 20rem;
-    padding: 0.5rem;
-    color: black;
+  width: 20rem;
+  padding: 0.5rem;
+  color: black;
 }
-
-
