added feature to update user profile

--- a/src/components/NavHeader/style.css
+++ b/src/components/NavHeader/style.css
@@ -24,7 +24,11 @@ header {
   justify-content: center;
   background-color: var(--secondary-color);
   width: 100%;
-  z-index: 2;
+  z-index: 11111;
+  padding: 1rem;
+  border-radius: 0 0 8px 8px;
+
+  backdrop-filter: blur(200px);
 }
 .hamburguer-nav ul {
   text-align: center;
