--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -3,7 +3,8 @@
   color: white;
   border-radius: 7px;
   margin-bottom: 2rem;
-  width: 320px;
+  /* width: 320px; */
+  width: 500px;
   margin: 2rem auto;
 }
 
@@ -61,11 +62,11 @@
 
 .comments-section {
   position: absolute;
-  background: var(--primary-color);
+  background: var(--secondary-color);
   width: 100%;
-  padding: 0.5rem;
+  padding: 0.7rem;
   word-wrap: break-word;
-  border-radius: 3px;
+  border-radius: 5px;
   z-index: 11;
 }
 
