--- a/src/animations/slideIn.css
+++ b/src/animations/slideIn.css
@@ -8,6 +8,11 @@
   animation: slide-out 0.5s ease-out;
 }
 
+.slide-in-fwd-center {
+	-webkit-animation: slide-in-fwd-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-fwd-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 /**
  * ----------------------------------------
  * animation slide-in-top
@@ -39,6 +44,12 @@
   }
 }
 
+/**
+ * ----------------------------------------
+ * animation slide-in-out
+ * ----------------------------------------
+ */
+
 @-webkit-keyframes slide-out {
   0% {
     -webkit-transform: translateX(0);
@@ -64,3 +75,34 @@
     opacity: 0;
   }
 }
+
+/**
+ * ----------------------------------------
+ * animation slide-in-fwd-center
+ * ----------------------------------------
+ */
+ @-webkit-keyframes slide-in-fwd-center {
+  0% {
+    -webkit-transform: translateZ(-1400px);
+            transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-center {
+  0% {
+    -webkit-transform: translateZ(-1400px);
+            transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
