--- a/src/animations/slideIn.css
+++ b/src/animations/slideIn.css
@@ -1,11 +1,11 @@
 .slide-in-top {
-  -webkit-animation: slide-in-top 0.5s ease-out;
-  animation: slide-in-top 0.5s ease-in;
+  -webkit-animation: slide-in-top 0.5s ease-in;
+  animation: slide-in-top 0.5s cubic-bezier(0.85, 0.27, 0.19, 1.7);
 }
 
 .slide-out {
   -webkit-animation: slide-out 0.5s ease-out;
-  animation: slide-out 0.5s ease-out;
+  animation: slide-out 0.5s cubic-bezier(0.85, 0.27, 0.19, 1.7);
 }
 
 /**
@@ -15,52 +15,62 @@
  */
 @-webkit-keyframes slide-in-top {
   0% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    -webkit-transform: translateY(-10%);
+    transform-origin: top;
+    transform: translateY(-10%) scale(0);
+
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: translateY(0);
+    transform-origin: top;
+    transform: translateY(0) scale(1);
     opacity: 1;
   }
 }
 
 @keyframes slide-in-top {
   0% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    -webkit-transform: scale(0);
+    transform-origin: top;
+    transform: scale(0);
+
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: scale(1);
+    transform-origin: top;
+    transform: scale(1);
     opacity: 1;
   }
 }
 
 @-webkit-keyframes slide-out {
   0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: scale(1);
+    transform-origin: top;
+    transform: scale(1);
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    -webkit-transform: scale(0);
+    transform-origin: top;
+    transform: scale(0);
     opacity: 0;
   }
 }
 
 @keyframes slide-out {
   0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: scale(1);
+    transform-origin: top;
+    transform: scale(1);
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+    -webkit-transform: scale(0);
+    transform-origin: top;
+    transform: scale(0);
     opacity: 0;
   }
 }
