added material icons and some mui components to the app, as well some fixes

--- a/src/components/NavHeader/style.css
+++ b/src/components/NavHeader/style.css
@@ -4,12 +4,15 @@ header {
   align-items: center;
   justify-content: space-between;
   color: white;
-  padding: 1.2rem;
+  padding: 1rem;
   text-align: center;
+  min-width: 0;
 }
 
-header > * {
-  width: 33%;
+header > h3 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  min-width: 0;
 }
 
 .container {
@@ -20,6 +23,10 @@ header > * {
 
 .log-container > button {
   margin-top: 0;
+}
+
+.logged {
+  width: 20%;
 }
 
 .hamburguer-nav {
