--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -7,6 +7,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 65%;
+  margin: 0 auto;
 }
 
 .user-data .btn {
