--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -19,6 +19,7 @@
 
 .post-info {
   padding: 0.7rem;
+  min-height: 213px;
 }
 
 .post-info > div:nth-child(2) {
@@ -49,7 +50,9 @@
 
 .post-info-inner {
   margin: 0.5rem 0 0.5rem;
-  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .post-info-inner > p {
@@ -61,7 +64,7 @@
   display: flex;
   align-items: center;
   padding: 0.5rem;
-  width: 30%;
+  width: 23%;
 }
 
 .like-container > button {
