--- a/src/components/CreatePost/styles.css
+++ b/src/components/CreatePost/styles.css
@@ -11,16 +11,32 @@
   align-items: center;
 }
 
+.create-post > input {
+  color: white;
+}
+
 .create-post > textarea {
   background-color: var(--background-color);
   resize: none;
   padding: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
+
+  margin-bottom: 0.5rem;
 }
 
-.create-post > .btn {
+.create-post > .btn:last-of-type {
   margin-left: 0;
+  margin-bottom: 0.5rem;
+}
+
+.create-post > .btn:first-of-type {
+  margin-left: 0;
+  margin-bottom: 0.5rem;
+  font-size: 0.8rem;
+}
+
+.imageToUpload {
+  max-width: 250px;
+  border-radius: 3px;
 }
