--- a/src/components/UpdateProfile/styles.css
+++ b/src/components/UpdateProfile/styles.css
@@ -1,8 +1,14 @@
 .update-profile-form > .btn {
   margin-left: 0;
   margin-top: 2rem;
-  width: 30%;
   align-self: center;
+}
+
+.update-profile-form > input {
+  padding: 0.6rem;
+  font-size: 1.1rem;
+  border-radius: 4px;
+  border: none;
 }
 
 .update-profile-form > .second-input {
