--- a/src/components/Profile/styles.css
+++ b/src/components/Profile/styles.css
@@ -29,6 +29,11 @@
   font-size: 1.5rem;
 }
 
+.no-post-message {
+  text-align: center;
+  margin-top: 2rem;
+}
+
 .username-container > *:not(.btn),
 .password-container > *:not(.btn) {
   text-align: center;
